out of heap problem fix